chore: update dependencies to fix the test running